# os-notebook

./: .gitignore  CMakeLists.txt  README.adoc  task-list.adoc
headers/: commons.hpp
seminar-13/: common.h  message.h  messenger-one.cpp  messenger-two.cpp
seminar-14/: common.h  message.h  single-messenger.cpp
seminar_1/: 1_task_one.cpp  2_task_two.cpp  3_task_three.cpp  task-1.cpp  task-2.cpp  task-3.cpp
seminar_11/: bubble-sort.h  quick-sort.h  shell-sort.h  task-9.cpp
seminar_12/: 10-task.cpp  common.h  task-10.cpp  thread-functions.h  write.h
seminar_2/: 4_task_four.cpp  task-4.cpp
seminar_3/: 5_task_five.cpp  6_task_six.cpp  my-copy.cpp  myCopy.cpp  myCopy.hpp  task-5.cpp  task-6.cpp
seminar_5/: 7_task_seven.cpp
seminar_8/: 8_task.c  task-8.c
seminar_9/: eatingPhilosophersTask.c  phylosopher.h
